--- a/darkice.cfg
+++ b/darkice.cfg
@@ -32,7 +32,7 @@ name            = HOSTNAME
                             # name of the stream
 description     = DESCRIPTION
                             # description of the stream
-url             = http://vinylplayer:8000
+url             = http://HOSTNAME:8000
                             # URL related to the stream
 genre           = Various
                             # genre of the stream
